--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 
 <h2>Selected Working Papers</h2>
 
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=" target="_blank">Learning to Price Supply Chain Contracts against a Learning Retailer</a></span> (with Xuejun Zhao and William B. Haskell)<br /> 
+		Preprint<br/></p>
+
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4178738" target="_blank">Risk-Aware Linear Bandits: Theory and Applications in Smart Order Routing</a></span> (with Jingwei Ji and Renyuan Xu)<br /> 
 Preprint<br/>
 &#9671; Preliminary version: <i>Proceedings of the 3rd ACM International Conference on AI in Finance (<b>ICAIF 2022</b>), INFORMS Workshop on Data Science 2022</i><br/>
@@ -123,6 +126,9 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 				
 									
 <h2>Selected Conference Publications</h2>
+
+<p class="big" align="justify"><span class="papername"><a href="https://dl.acm.org/doi/abs/10.1145/3533271.3561692" target="_blank">Risk-Aware Linear Bandits: Theory and Applications in Smart Order Routing</a></span> (with Jingwei Ji and Renyuan Xu)<br /> 
+<i>Proceedings of the 3rd ACM International Conference on AI in Finance (<b>ICAIF 2022</b>)</i><br/></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://proceedings.mlr.press/v151/zhu22a.html" target="_blank">Safe Optimal Design with Applications in Off-Policy Learning
 </a></span> (with Branislav Kveton)<br /> 
