--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 									
 <h2>Selected Conference Publications</h2>
 
-<p class="big" align="justify"><span class="papername"><a href="https://dl.acm.org/doi/abs/10.1145/3533271.3561692" target="_blank">Risk-Aware Linear Bandits: Theory and Applications in Smart Order Routing</a></span> (with Jingwei Ji and Renyuan Xu)<br /> 
+<p class="big" align="justify"><span class="papername"><a href="https://dl.acm.org/doi/abs/10.1145/3533271.3561692" target="_blank">Risk-Aware Linear Bandits with Application in Smart Order Routing</a></span> (with Jingwei Ji and Renyuan Xu)<br /> 
 <i>Proceedings of the 3rd ACM International Conference on AI in Finance (<b>ICAIF 2022</b>)</i><br/></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://proceedings.mlr.press/v151/zhu22a.html" target="_blank">Safe Optimal Design with Applications in Off-Policy Learning
