--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@ Preprint<br/>
 </p>
 			
 			
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
-Minor Revision,	<b><i>Management Science</i></b></br>
-&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
+
 			
 			
 			
@@ -99,6 +97,10 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 
 
 <h2>Journal Publications</h2>
+
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
+		<b><i>Management Science</i></b> (Accepted)</br>
+	&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
 <b><i>Management Science</i></b> (Accepted)</br>
