--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 <h2>Selected Working Papers</h2>
 
 
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4265182" target="_blank">Phase Transitions in Learning and Earning under Price Protection Guarantee</a></span> (with Qing Feng and Stefanus Jasin)<br /> 
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4265182" target="_blank">(Temporal) Fairness in Learning and Earning: Price Protection Guarantee and Phase Transitions</a></span> (with Qing Feng and Stefanus Jasin)<br /> 
 		Preprint<br/></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4265195" target="_blank">Learning to Price Supply Chain Contracts against a Learning Retailer</a></span> (with Xuejun Zhao and William B. Haskell)<br /> 
