--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 <h2>Journal Publications</h2>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
-		<b><i>Management Science</i></b> (Accepted)</br>
+<i><b>Management Science</b></i> (Accepted)</br>
 	&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
-<b><i>Management Science</i></b> (Accepted)</br>
+<i><b>Management Science</b></i> (Accepted)</br>
 &#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
 &#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i><br/>
 &#9671;	<span style="color:#DC143C;">2nd Place, INFORMS Innovative Applications in Analytics Award 2022</span><br/>
@@ -112,7 +112,7 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3396096" target="_blank">Joint Patient Selection and Scheduling under No-Shows: Theory and Application in Proton Therapy</a></span> (with Soroush Saghafian, Nikolaos Trichakis, and Helen Shih)<br /> 
-<b><i>Production and Operations Management</i></b> <a href="https://onlinelibrary.wiley.com/doi/10.1111/poms.13886" target="_blank">[Journal]</a></br>
+<i><b>Production and Operations Management</b> 32(2): 547-563</i> <a href="https://onlinelibrary.wiley.com/doi/10.1111/poms.13886" target="_blank">[Journal]</a></br>
 &#9671; In collaboration with <a href="https://www.massgeneral.org/">Massachusetts General Hospital</a><br/>
 
 
