--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 <h2>Journal Publications</h2>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
-<i><b>Management Science</b></i> (Accepted)</br>
+<i><b>Management Science</b></i> <a href="https://pubsonline.informs.org/doi/10.1287/mnsc.2023.4704" target="_blank">[Journal]</a></br>
 	&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
