--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1>Poyraz Bozkurt</h1>
 </div>
 <table class="imgtable"><td>
-<img src="ruihao.jpeg" alt="Poyraz Bozkurt" height="300" width="300" />&nbsp;</td>
+<img src="poyraz.png" alt="Poyraz Bozkurt" height="300" width="300" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
 		Operations Management and Industrial Engineering<br>
