--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</p>
 	<h3>Contact</h3>
 	<p class="big">
-			Email: pbozkurtAT]purdue.edu<br />
+			Email: pbozkurt[AT]purdue.edu<br />
 			</p>
 	</td></table>
 <h2>Education Background</h2>
