--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <img src="poyraz.png" alt="Poyraz Bozkurt" height="300" width="300" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
-		Operations Management and Industrial Engineering<br>
+		Operations and Industrial Engineering<br>
 		Purdue University<br>
 	</p>
 	<h3>Contact</h3>
@@ -44,7 +44,6 @@
 	</td></table>
 <h2>Education Background</h2>
 <p class="big" align="justify">
-Ph.D. in Operations Management, 2024 (expected)<br/> 
 M.S in Industrial Engineering, Purdue University, 2023 <br/>
 B.S in Industrial Engineering, Sabanci University, 2019
     
