update work experience

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="index.html#research">Research</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
-<div class="menu-item"><a href="https://www.linkedin.com/in/poyraz/">LinkedIn</a></div>
+<div class="menu-item"><a href="https://www.linkedin.com/in/poyrazbozkurt/">LinkedIn</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Poyraz Bozkurt</h1>
 </div>
 <table class="imgtable"><td>
-<img src="poyraz.png" alt="Poyraz Bozkurt" height="300" width="300" />&nbsp;</td>
+<img src="poyrazphoto.jpeg" alt="Poyraz Bozkurt" height="300" width="300" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
-		Operations and Industrial Engineering<br>
+		Industrial Engineering<br>
 		Purdue University<br>
 	</p>
 	<h3>Contact</h3>
@@ -51,10 +51,19 @@ B.S in Industrial Engineering, Sabanci University, 2019
 <a name="research"></a>
 
 <h2>Research Interests</h2>
-<p class="big" align="justify"> I work on developing novel algorithms for machine learning and sequential decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. <br>
+<p class="big" align="justify"> I work on developing novel algorithms for machine learning and sequential decision-making to address fundamental and practical challenges in revenue management, supply chain, and service operations. <br>
 </p>
 
-<a name="pub"></a>
+<a name="work"></a>
+
+<h2>Work / Internship Experience</h2>
+<p class="big" align="justify">
+Summer Research Intern at Artificial Intelligence Department, Fidelity Investments, 2023 <br/>
+	<ul>
+  <li>Developed a Bandits-Based Adaptive Large Neighborhood Search Solver (BALANS) </li>
+  <li>ML guided heuristics to solve combinatorial optimization problems</li>
+</ul>
+</p>
 
 	
 
