--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h1>Poyraz Bozkurt</h1>
 </div>
 <table class="imgtable"><td>
-<img src="poyrazphoto.jpeg" alt="Poyraz Bozkurt" height="300" width="300" />&nbsp;</td>
+<img src="poyraz_photo_shot.png" alt="Poyraz Bozkurt" height="300" width="250" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
 		Industrial Engineering<br>
