--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h1>Poyraz Bozkurt</h1>
 </div>
 <table class="imgtable"><td>
-<img src="poyraz_photo_shot.png" alt="Poyraz Bozkurt" height="300" width="250" />&nbsp;</td>
+<img src="poyraz_bozkurt_nyc.png" alt="Poyraz Bozkurt" height="350" width="340" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
 		Industrial Engineering<br>
@@ -51,7 +51,7 @@ B.S in Industrial Engineering, Sabanci University, 2019
 <a name="research"></a>
 
 <h2>Research Interests</h2>
-<p class="big" align="justify"> I work on developing novel algorithms for machine learning and sequential decision-making to address fundamental and practical challenges in revenue management, supply chain, and service operations. <br>
+<p class="big" align="justify"> Reinforcement learning, bandits, experimentation, and causal inference for online platforms. <br>
 </p>
 
 <a name="work"></a>
