--- a/index.html
+++ b/index.html
@@ -28,22 +28,24 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Poyraz Bozkurt</h1>
+<h1> Poyraz Bozkurt </h1>
 </div>
 <table class="imgtable"><td>
 <img src="poyraz_bozkurt_nyc.png" alt="Poyraz Bozkurt" height="350" width="340" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
-		Industrial Engineering<br>
-		Purdue University<br>
+		Ph.D. Student <br>
+		Fuqua School of Business<br>
+		Duke University<br>
 	</p>
 	<h3>Contact</h3>
 	<p class="big">
-			Email: pbozkurt[AT]purdue.edu<br />
+			Email: poyraz.bozkurt[AT]duke.edu<br />
 			</p>
 	</td></table>
 <h2>Education Background</h2>
 <p class="big" align="justify">
+Ph.D. Student in Operations Management, Duke University <br/>
 M.S in Industrial Engineering, Purdue University, 2023 <br/>
 B.S in Industrial Engineering, Sabanci University, 2019
     
