--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h1> Poyraz Bozkurt </h1>
 </div>
 <table class="imgtable"><td>
-<img src="poyraz_bozkurt_nyc.png" alt="Poyraz Bozkurt" height="350" width="340" />&nbsp;</td>
+<img src="pb_stage.png" alt="Poyraz Bozkurt" height="350" width="340" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
 		Ph.D. Student <br>
