--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@ Summer Research Intern at Artificial Intelligence Department, Fidelity Investmen
 </ul>
 </p>
 
+
+
+<h2>Favorite Quotes</h2>
+<p class="big" align="justify">
+
+	"If people do not believe that mathematics is simple, it is only because they do not realize how complicated life is." -John von Neumann  <br/>
+	"Potential is only the expression of a possibility. Something that can be assessed accurately only in retrospect. In other words, you’ll never know how good you might have become unless you try." -Mike Mentzer<br/>
+
+</p>
 	
 
 	
