--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <p class="big" align="justify">
 Ph.D. Student in Operations Management, Duke University <br/>
 M.S in Industrial Engineering, Purdue University, 2023 <br/>
-B.S in Industrial Engineering, Sabanci University, 2019
+B.S in Industrial Engineering, Sabancı University, 2019 <br/>
+<span style="margin-left: 20px;">• Overseas Abroad Program, Boston University, 2018</span>
 </p>
 
 <a name="research"></a>
@@ -58,7 +59,7 @@ Reinforcement learning, bandits, experimentation, and causal inference for onlin
 <a name="work"></a>
 <h2>Work / Internship Experience</h2>
 <p class="big" align="justify">
-Summer Research Intern at Artificial Intelligence Department, Fidelity Investments, 2023 <br/>
+Summer Research Intern at Artificial Intelligence Department, Fidelity Investments, Boston, Massachusetts, 2023 <br/>
 <ul>
   <li>Developed a Bandits-Based Adaptive Large Neighborhood Search Solver (BALANS)</li>
   <li>ML guided heuristics to solve combinatorial optimization problems</li>
