--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 Ph.D. Student in Operations Management, Duke University <br/>
 M.S in Industrial Engineering, Purdue University, 2023 <br/>
 B.S in Industrial Engineering, Sabancı University, 2019 <br/>
-<span style="margin-left: 20px;">• Overseas Abroad Program, Boston University, 2018</span>
+<span style="margin-left: 20px;">• Overseas Study Program, Boston University, 2018</span>
 </p>
 
 <a name="research"></a>
