--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     Fuqua School of Business<br>
     Duke University<br>
 </p>
+    <h3>pronounciation</h3>
+<p class="big">
+   Poyraz, pronounced like POY-rahz — rhymes with “boy-jazz<br />
+</p>
 <h3>Contact</h3>
 <p class="big">
     Email: poyraz.bozkurt[AT]duke.edu<br />
