--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </p>
     <h3>pronounciation</h3>
 <p class="big">
-   Poyraz, pronounced like POY-rahz — rhymes with “boy-jazz<br />
+   Poyraz, pronounced like POY-rahz — rhymes with boy-jazz<br />
 </p>
 <h3>Contact</h3>
 <p class="big">
