--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
     Fuqua School of Business<br>
     Duke University<br>
 </p>
-    <h3>pronounciation</h3>
-<p class="big">
-   Poyraz, pronounced like POY-rahz — rhymes with boy-jazz<br />
-</p>
+
 <h3>Contact</h3>
 <p class="big">
     Email: poyraz.bozkurt[AT]duke.edu<br />
@@ -58,6 +55,17 @@ B.S in Industrial Engineering, Sabancı University, 2019 <br/>
 <h2>Research Interests</h2>
 <p class="big" align="justify">
 Reinforcement learning, bandits, experimentation, and causal inference for online platforms. <br>
+</p>
+
+
+<a name="teaching"></a>
+<h2>Teaching Experience</h2>
+<p class="big" align="justify">
+Math Instructor for 2025 Ph.D. Math Bootcamp, Duke University<br/>
+<ul>
+  <li>Designed and taught foundational mathematics modules including linear algebra, real analysis, and optimization to incoming doctoral students.</li>
+  <li><a href="https://duke.box.com/s/6kyuxu7mbvy70ee79f9zfacovuarvw0c" target="_blank">View Syllabus (PDF)</a></li>
+</ul>
 </p>
 
 <a name="work"></a>
@@ -86,16 +94,7 @@ Summer Research Intern at Artificial Intelligence Department, Fidelity Investmen
     <li><i>Thinking, Fast and Slow</i> by Daniel Kahneman</li>
 </ul>
 
-<h3>Favorite Quotes</h3>
-<p>
-    "If people do not believe that mathematics is simple, it is only because they do not realize how complicated life is." - John von Neumann<br/>
-    "Potential is only the expression of a possibility. Something that can be assessed accurately only in retrospect. In other words, you’ll never know how good you might have become unless you try." - Mike Mentzer<br/>
-</p>
-</p>
 
-</td>
-</tr>
-</table>
 
 <!-- This script will be injected in the pages of the site to collect visiting info for Google analytics. -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=MY_ID"></script>
