--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="bootcamp.html" target="_blank">2025 Math Bootcamp</a></div>
 <div class="menu-item"><a href="index.html#research">Research</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
-<div class="menu-item"><a href="index.html#art_books_quotes">Art, Favorite Books, and Quotes</a></div>
+<div class="menu-item"><a href="index.html#art_books_quotes">Favorite Books</a></div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/poyrazbozkurt/">LinkedIn</a></div>
 </td>
 <td id="layout-content">
