--- a/index.html
+++ b/index.html
@@ -23,26 +23,60 @@
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
 <div class="menu-item"><a href="index.html#art_books_quotes">Favorite Books</a></div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/poyrazbozkurt/">LinkedIn</a></div>
+
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Poyraz Bozkurt</h1>
 </div>
-<table class="imgtable"><td>
-<img src="pb_stage.png" alt="Poyraz Bozkurt" height="350" width="340" />&nbsp;</td>
-</td>
-<td align="left">
-<p class="big">
-    Ph.D. Student <br>
-    Fuqua School of Business<br>
-    Duke University<br>
-</p>
+<table class="imgtable">
+  <tr>
+    <!-- Profile Image -->
+    <td>
+      <img src="pb_stage.png" alt="Poyraz Bozkurt" height="350" width="340" />
+    </td>
 
-<h3>Contact</h3>
-<p class="big">
-    Email: poyraz.bozkurt[AT]duke.edu<br />
-</p>
-</td></table>
+    <!-- Bio and Contact -->
+    <td align="left" style="padding-left: 20px;">
+      <p class="big">
+        Ph.D. Student <br />
+        Fuqua School of Business<br />
+        Duke University<br />
+      </p>
+      <h3>Contact</h3>
+      <p class="big">
+        Email: poyraz.bozkurt[AT]duke.edu<br />
+      </p>
+    </td>
+
+<td style="padding-left: 40px; vertical-align: top;">
+  <h2 style="border-bottom: 1px solid #ccc; color: #3b5998;">Updates</h2>
+  <div style="border-left: 3px solid #999; padding-left: 20px;">
+
+
+
+    <div style="margin-bottom: 25px; position: relative;">
+      <span style="position: absolute; left: -29px; top: 6px; width: 10px; height: 10px; background-color: #27ae60; border-radius: 50%; display: inline-block;"></span>
+      <span style="background-color: #27ae60; color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">AUG 2023</span>
+      <div style="margin-top: 5px;">Started Ph.D. Program at <a href="#">Fuqua School of Business, Duke University</a>.</div>
+    </div>
+
+      <div style="margin-bottom: 25px; position: relative;">
+      <span style="position: absolute; left: -29px; top: 6px; width: 10px; height: 10px; background-color: #27ae60; border-radius: 50%; display: inline-block;"></span>
+      <span style="background-color: #27ae60; color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">JUN 2023</span>
+      <div style="margin-top: 5px;">Interned at <a href="#">Fidelity Investments AI, Boston</a>.</div>
+    </div>
+
+    <div style="margin-bottom: 25px; position: relative;">
+      <span style="position: absolute; left: -29px; top: 6px; width: 10px; height: 10px; background-color: #e74c3c; border-radius: 50%; display: inline-block;"></span>
+      <span style="background-color: #e74c3c; color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">OCT 2022</span>
+      <div style="margin-top: 5px;">Presented Dynamic Bandits at <a href="#">INFORMS Annual Meeting, Indianapolis</a>.</div>
+    </div>
+
+  </div>
+</td>
+  </tr>
+</table>
 
 <h2>Education Background</h2>
 <p class="big" align="justify">
@@ -78,6 +112,10 @@ Summer Research Intern at Artificial Intelligence Department, Fidelity Investmen
   <li>ML guided heuristics to solve combinatorial optimization problems</li>
 </ul>
 </p>
+
+
+
+
 
 <a name="art_books_quotes"></a>
 <h2>Art, Favorite Books, and Quotes</h2>
