--- a/index.html
+++ b/index.html
@@ -53,24 +53,22 @@
   <h2 style="border-bottom: 1px solid #ccc; color: #3b5998;">Updates</h2>
   <div style="border-left: 3px solid #999; padding-left: 20px;">
 
-
-
     <div style="margin-bottom: 25px; position: relative;">
       <span style="position: absolute; left: -29px; top: 6px; width: 10px; height: 10px; background-color: #27ae60; border-radius: 50%; display: inline-block;"></span>
       <span style="background-color: #27ae60; color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">AUG 2023</span>
-      <div style="margin-top: 5px;">Started Ph.D. Program at <a href="#">Fuqua School of Business, Duke University</a>.</div>
+      <div style="margin-top: 5px;">Started Ph.D. Program at <a href="https://www.fuqua.duke.edu/" target="_blank">Fuqua School of Business, Duke University</a>.</div>
     </div>
 
-      <div style="margin-bottom: 25px; position: relative;">
+    <div style="margin-bottom: 25px; position: relative;">
       <span style="position: absolute; left: -29px; top: 6px; width: 10px; height: 10px; background-color: #27ae60; border-radius: 50%; display: inline-block;"></span>
       <span style="background-color: #27ae60; color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">JUN 2023</span>
-      <div style="margin-top: 5px;">Interned at <a href="#">Fidelity Investments AI, Boston</a>.</div>
+      <div style="margin-top: 5px;">Interned at <a href="https://www.fidelity.com/" target="_blank">Fidelity Investments AI, Boston</a>.</div>
     </div>
 
     <div style="margin-bottom: 25px; position: relative;">
       <span style="position: absolute; left: -29px; top: 6px; width: 10px; height: 10px; background-color: #e74c3c; border-radius: 50%; display: inline-block;"></span>
       <span style="background-color: #e74c3c; color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">OCT 2022</span>
-      <div style="margin-top: 5px;">Presented Dynamic Bandits at <a href="#">INFORMS Annual Meeting, Indianapolis</a>.</div>
+      <div style="margin-top: 5px;">Presented Dynamic Bandits at <a href="https://www.informs.org/" target="_blank">INFORMS Annual Meeting, Indianapolis</a>.</div>
     </div>
 
   </div>
