--- a/bootcamp.html
+++ b/bootcamp.html
@@ -31,7 +31,8 @@
     <a href="https://duke.box.com/s/tsr9ers8bxcuzvzw6igouq7iynqywt2w" target="_blank">Handwritten Notes</a>
   </li>
 <li><a href="https://duke.box.com/s/l3wwoze3vjc29gqtu0m54wdfzviov2cx" target="_blank">Lecture 2(PDF)</a></li>
-<li><a href="https://duke.box.com/s/cue40xkv15xy6lmgf5gyxzivh4b7p12a" target="_blank">Lecture 3(PDF)</a></li>
+  <a href="https://duke.box.com/s/0lorqsfyc4gcj8h7p9uphjhy42g5gt4t" target="_blank">Handwritten Notes</a>
+  <li><a href="https://duke.box.com/s/cue40xkv15xy6lmgf5gyxzivh4b7p12a" target="_blank">Lecture 3(PDF)</a></li>
   <li><a href="https://duke.box.com/s/9kfgtc3lzx4d3wp923u82yqfrcx5fd0p" target="_blank">Lecture 4(PDF)</a></li>
   <li><a href="https://duke.box.com/s/58njpyxx2csupwp2dslezpytvvnr5mth" target="_blank">Lecture 5(PDF)</a></li>
 </ul>
