--- a/bootcamp.html
+++ b/bootcamp.html
@@ -42,7 +42,10 @@
     <a href="https://duke.box.com/s/9kfgtc3lzx4d3wp923u82yqfrcx5fd0p" target="_blank">Lecture 4(PDF)</a> &nbsp;|&nbsp;
   <a href="https://duke.box.com/s/u4b5rjnokuw1b7bqb9ovkn9ceg4wwcui" target="_blank">Handwritten Notes</a>
   </li>
-  <li><a href="https://duke.box.com/s/58njpyxx2csupwp2dslezpytvvnr5mth" target="_blank">Lecture 5(PDF)</a></li>
+  <li>
+    <a href="https://duke.box.com/s/58njpyxx2csupwp2dslezpytvvnr5mth" target="_blank">Lecture 5(PDF)</a> &nbsp;|&nbsp;
+      <a href="https://duke.box.com/s/41hw5vnhjsxrf56z1syc7eva74ez8krv" target="_blank">Handwritten Notes</a>
+  </li>
 </ul>
 
 
