--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="bootcamp.html" target="_blank">2025 Math Bootcamp</a></div>
+<div class="menu-item"><a href="bootcamp.html" target="_blank">Teaching</a></div>
 <div class="menu-item"><a href="index.html#research">Research</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
 <div class="menu-item"><a href="index.html#art_books_quotes">Favorite Books</a></div>
@@ -76,7 +76,7 @@
   </tr>
 </table>
 
-<h2>Education Background</h2>
+<h2>Education</h2>
 <p class="big" align="justify">
 Ph.D. Student in Operations Management, Duke University <br/>
 M.S in Industrial Engineering, Purdue University, 2023 <br/>
@@ -85,14 +85,14 @@ B.S in Industrial Engineering, Sabancı University, 2019 <br/>
 </p>
 
 <a name="research"></a>
-<h2>Research Interests</h2>
+<h2>Research</h2>
 <p class="big" align="justify">
 Reinforcement learning, bandits, experimentation, and causal inference for online platforms. <br>
 </p>
 
 
 <a name="teaching"></a>
-<h2>Teaching Experience</h2>
+<h2>Teaching</h2>
 <p class="big" align="justify">
 Math Instructor for 2025 Ph.D. Math Bootcamp, Duke University<br/>
 <ul>
