--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ Reinforcement learning, bandits, experimentation, and causal inference for onlin
 Math Instructor for 2025 Ph.D. Math Bootcamp, Duke University<br/>
 <ul>
   <li>Designed and taught foundational mathematics modules including linear algebra, real analysis, and optimization to incoming doctoral students.</li>
+  <li>Teaching Evaluation: 4.7 / 5.0</li>
   <li><a href="https://duke.box.com/s/6kyuxu7mbvy70ee79f9zfacovuarvw0c" target="_blank">View Syllabus (PDF)</a></li>
 </ul>
 </p>
