--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="bootcamp.html" target="_blank">Teaching</a></div>
 <div class="menu-item"><a href="index.html#research">Research</a></div>
-<div class="menu-item"><a href="index.html#pub">Publications</a></div>
+<div class="menu-item"><a href="https://scholar.google.com/citations?user=--ZhnkAAAAAJ&hl=en">Google Scholar</a></div>
 <div class="menu-item"><a href="index.html#art_books_quotes">Favorite Books</a></div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/poyrazbozkurt/">LinkedIn</a></div>
 
